--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         </div>
                         <div class="col-md-3 mx-5 mt-5">
                             <div class="img-wrapper ">
-                                <img class="img-fluid" src="./images/photo.png" alt="MyImage">
+                                <img class="img-fluid" src="./images/image1.png" alt="MyImage">
                             </div>
                         </div>
                     </div>
@@ -266,7 +266,7 @@
                                 <div class="card mb-5 overflow-hidden shadow rounded-4 border-0" style="max-width: 900px;">
                                     <div class="row g-0">
                                         <div class="col-md-4">
-                                            <img src="images/imresizer-1734966162650.jpg" 
+                                            <img src="images/Sundown.jpg" 
                                                 class="img-fluid rounded-start" alt="Sundown Image">
                                         </div>
                                         <div class="col-md-8 d-flex align-items-center ps-4">
