--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                 <!-- <h2 class="text-primary fw-bolder mb-0">Experience</h2> -->
                                 <!-- Download resume button-->
                                 <!-- Note: Set the link href target to a PDF file within your project-->
-                                <a class="btn b-b  px-4 py-3" href="#!">
+                                <a class="btn b-b  px-4 py-3" href="docs/VikasKanwate_Resume.pdf" target="_blank">
                                     <div class="d-inline-block  bi bi-download me-2"></div>
                                     Download Resume
                                 </a>
