some adjustment in the mobile view

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     </div>
     <div id="page-content">
         <main class="d-flex d-flex flex-column h-100">
-            <header class="container-fulid mt-2 z-5">
+            <header class="container-fulid mt-0
+             z-5">
                 <nav class="navbar navbar-expand-lg bg-success-subtle position-fixed">
                     <div class="container">
                         <a class="navbar-brand fs-3 text-primary fw-bolder text-gradient" href="index.html">
@@ -41,29 +42,29 @@
                         </div>
                     </div>
                 </nav>
-                <div class="container header-bottom mt-5" id="Home">
+                <div class="container header-bottom mt-5 mt-sm-0" id="Home">
                     <div class="row d-flex justify-content-center">
-                        <div class="col-md-5 mt-5">
+                        <div class="col-md-5 mt-xxl-5 mt-2">
                             <!-- Header text content-->
                             <div class="text-center text-xxl-start">
-                                <div class="mt-4 mb-4 text-primary">
+                                <div class="mt-0 mb-4 text-primary">
                                     <div class="text-uppercase text-white">Design &middot; Development &middot; Database
                                     </div>
                                 </div>
                                 <!-- <div class="fs-3 fw-light text-muted">I can help your business to</div> -->
-                                <h1 class="display-3 fw-bolder mb-2 "><span class=" d-inline">I'am vikas</span></h1>
-                                <h4 class="mb-5 ">Software Developer from pune</h4>
+                                <h1 class="display-3 fw-bolder mb-2"><span class=" d-inline">I'am vikas</span></h1>
+                                <h4 class=" mb-xxl-5 mb-4">Software Developer from pune</h4>
                                 <div
                                     class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
-                                    <a class="btn  btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder btn-effect text-white"
+                                    <a class="btn btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder btn-effect text-white"
                                         href="#Resume"><span class="first-btn text-center">RESUME</span></a>
                                     <a class="btn btn-lg px-5 py-3 fs-6 fw-bolder btn-effect text-white"
                                         href="#projects"><span>PROJECTS</span></a>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-3 mx-5 mt-5">
-                            <div class="img-wrapper ">
+                        <div class="col-md-3 mt-0">
+                            <div class="img-wrapper mt-sm-0">
                                 <img class="img-fluid" src="./images/image1.png" alt="MyImage">
                             </div>
                         </div>
@@ -74,7 +75,7 @@
                 <div class="container px-5">
                     <div class="row gx-5 justify-content-center">
                         <div class="col-xxl-8">
-                            <div class="text-center my-5">
+                            <div class="text-center my-3">
                                 <h2 class="display-5 fw-bolder"><span class="text-white d-inline">About Me</span></h2>
                                 <p class="lead fw-light mb-4 text-white">My name is Vikas Govind Kanwate .</p>
                                 <p class="text-white">Hello! I'm Vikas Kanwate, a passionate web developer with a knack for crafting dynamic and visually stunning websites. My journey in web development started with a simple curiosity about how websites work, and it has since evolved into a full-fledged passion for creating seamless user experiences and innovative web solutions.</p>
@@ -104,7 +105,7 @@
                                 <!-- Download resume button-->
                                 <!-- Note: Set the link href target to a PDF file within your project-->
                                 <a class="btn b-b  px-4 py-3" href="docs/VikasKanwate_Resume.pdf" target="_blank">
-                                    <div class="d-inline-block  bi bi-download me-2"></div>
+                                    <div class="d-inline-block   bi bi-download me-2"></div>
                                     Download Resume
                                 </a>
                             </div>
