--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="fresher web developer specializing in front-end and back-end development. Explore my projectsand resume. Get in touch to collaborate!">
     <title>MyPortfolio</title>
     <link rel="icon" href="Favicon/MobileFevicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
