--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="fresher web developer specializing in front-end and back-end development. Explore my projectsand resume. Get in touch to collaborate!">
+    <meta name="description"
+        content="fresher web developer specializing in front-end and back-end development. Explore my projectsand resume. Get in touch to collaborate!">
     <title>MyPortfolio</title>
     <link rel="icon" href="Favicon/MobileFevicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -57,10 +58,10 @@
                                 <h1 class="display-3 fw-bolder mb-2"><span class=" d-inline">I'am vikas</span></h1>
                                 <h4 class=" mb-xxl-5 mb-4">Software Developer from pune</h4>
                                 <div
-                                    class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
+                                    class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-1">
                                     <a class="btn btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder btn-effect text-white"
                                         href="#Resume"><span class="first-btn text-center">RESUME</span></a>
-                                    <a class="btn btn-lg px-5 py-3 fs-6 fw-bolder btn-effect text-white"
+                                    <a class="btn btn-lg px-5 py-3 fs-6 fw-bolder btn-effect text-white d-none d-sm-block"
                                         href="#projects"><span>PROJECTS</span></a>
                                 </div>
                             </div>
@@ -161,7 +162,8 @@
                                         <div class="mb-5">
                                             <div class="d-flex align-items-center mb-4">
                                                 <div class="feature bg-primary text-gradient text-white rounded-3 me-3">
-                                                    <i class="bi bi-tools"></i></div>
+                                                    <i class="bi bi-tools"></i>
+                                                </div>
                                                 <h3 class="fw-bolder mb-0"><span
                                                         class="text-gradient d-inline">Professional
                                                         Skills</span></h3>
@@ -197,7 +199,8 @@
                                         <div class="mb-0">
                                             <div class="d-flex align-items-center mb-4">
                                                 <div class="feature bg-primary text-gradient text-white rounded-3 me-3">
-                                                    <i class="bi bi-code-slash"></i></div>
+                                                    <i class="bi bi-code-slash"></i>
+                                                </div>
                                                 <h3 class="fw-bolder mb-0"><span
                                                         class="text-gradient d-inline">Languages</span></h3>
                                             </div>
@@ -336,9 +339,30 @@
                             </div>
                         </div>
                     </div>
+
                 </section>
+
             </div>
         </main>
+    </div>
+    <!-- bottom nav for mobile view -->
+    <div class="bottom-nav">
+        <a href="#Home" class="nav-item d-flex-col">
+            <i class="bi bi-house-fill"></i>
+            <span>Home</span>
+        </a>
+        <a href="#Resume" class="nav-item">
+            <i class="bi bi-person-fill"></i>
+            <span>Resume</span>
+        </a>
+        <a href="#projects" class="nav-item">
+            <i class="bi bi-person-lines-fill"></i>
+            <span>projects</span>
+        </a>
+        <a href="#contact" class="nav-item">
+            <i class="bi bi-dash-square-fill"></i>
+            <span>contact</span>
+        </a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
