--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <!-- Experience Section-->
                         <section>
                             <div class="d-flex align-items-center justify-content-between mb-4">
-                                <a class="btn b-b  px-4 py-3" href="docs/VikasKanwate_Resume.pdf" target="_blank">
+                                <a class="btn b-b  px-4 py-3" href="docs/VikasKanwate.pdf" target="_blank">
                                     <div class="d-inline-block   bi bi-download me-2"></div>
                                     Download Resume
                                 </a>
