--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                     into a full-fledged passion for creating seamless user experiences and innovative
                                     web solutions.</p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
-                                    <a class="text-white" href="#!"><i class="bi bi-linkedin"></i></a>
+                                    <a class="text-white" href="https://www.linkedin.com/in/vikas-kanwate-27a8492a6?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="bi bi-linkedin"></i></a>
                                     <a class="text-white" href="https://github.com/Vikaskanwate" target="_blank"><i
                                             class="bi bi-github"></i></a>
                                 </div>
