--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                                     </div>
                                 </div>
                                 <!-- Project Card 2-->
-                                <div class="card mb-5 overflow-hidden shadow rounded-4 border-0"
+                                <!-- <div class="card mb-5 overflow-hidden shadow rounded-4 border-0"
                                     style="max-width: 900px;">
                                     <div class="row g-0">
                                         <div class="col-md-4">
@@ -303,7 +303,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
